writing routes and factories

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,7 @@
 <body ng-controller="HomeController as home">
   <%= yield %>
 
-  <main ng-view></main>
+  <main class="container" ng-view></main>
   {{2+2}}
 
   {{corn}}
