--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -26,14 +26,14 @@
         </li>
       </ul>
       <div class="collapse nav navbar-nav nav-collapse slide-down" id="nav-collapse2">
-        <form class="navbar-form navbar-right form-inline" role="form">
+        <form id="login-form" method="post" action="/session" class="navbar-form navbar-right form-inline" role="form">
           <div class="form-group">
-            <label class="sr-only" for="Email">Email</label>
-            <input type="email" class="form-control" id="Email" placeholder="Email" autofocus required />
+            <label class="sr-only" for="email">Email</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="email" autofocus required />
           </div>
           <div class="form-group">
-            <label class="sr-only" for="Password">Password</label>
-            <input type="password" class="form-control" id="Password" placeholder="Password" required />
+            <label class="sr-only" for="password">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="password" required />
           </div>
           <button type="submit" class="btn btn-success">Sign in</button>
         </form>
