--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,13 +11,12 @@
 </head>
 
 
-<body ng-controller="HomeController as home">
+<body ng-controller="HomeController as stuff">
   <%= yield %>
 
   <main class="container" ng-view></main>
-  {{2+2}}
+  <section class="container">{{2+2}}</section>
 
-  {{corn}}
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
