--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -19,7 +19,7 @@
 </div>
 <ul class="list-group">
   <li ng-repeat="piece in pieces" class="list-group-item">
-    <p ng-click="stuff.activePiece = piece">{{piece.title}}</a>
+    <p ng-click="stuff.activePiece = piece" class="mar-0">{{piece.title}}</a>
   </li>
 </ul>
 
