--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,8 +15,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-2">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/my_pieces">My Pieces</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Works</a></li>
         <li><a href="#">News</a></li>
