--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
 
   <!-- <link rel="stylesheet" href="/css/normalize.css"> -->
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/readable.css">
   <link rel="stylesheet" href="/css/application.css">
 
