supports verbs, adj etc

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -38,10 +38,11 @@
           <button type="submit" class="btn btn-success">Sign in</button>
         </form>
       </div>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
-</nav><!-- /.navbar -->
+    </div>
+  </div>
+</nav>
 
 
-
-<h1>hello world</h1>
+<div class="container">
+  <h1>hello world</h1>
+</div>
