--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -1,22 +1,24 @@
-<h1>{{corn}}</h1>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div ng-init="tab='button'">
+      <button class="btn btn-primary" ng-click="tab='form'" ng-show="tab==='button'">Add Piece</button>
+      <form ng-show="tab==='form'" method="post" action="/pieces">
+        <div class="form-group">
+          <label for="new-title">Title</label>
+          <input type="text" class="form-control" id="new-title" name="title" required>
+        </div>
+        <div class="form-group">
+          <label for="new-piece">New Piece</label>
+          <textarea class="form-control" id="new-piece" name="content" placeholder="Express yourself!" rows="10" required></textarea>
+        </div>
 
-{{user.id}}
-<div ng-init="tab='button'">
-  <button class="btn btn-primary" ng-click="tab='form'" ng-show="tab==='button'">Add Piece</button>
-  <form ng-show="tab==='form'" method="post" action="/pieces">
-    <div class="form-group">
-      <label for="new-title">Title</label>
-      <input type="text" class="form-control" id="new-title" name="title" required>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button ng-click="tab='button'" class="btn btn-default">Close</button>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="new-piece">New Piece</label>
-      <textarea class="form-control" id="new-piece" name="content" placeholder="Express yourself!" rows="10" required></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <button ng-click="tab='button'" class="btn btn-default">Close</button>
-  </form>
+  </div>
 </div>
+
 <ul class="list-group">
   <li ng-repeat="piece in pieces" class="list-group-item">
     <p ng-click="stuff.activePiece = piece" class="mar-0">{{piece.title}}</a>
@@ -27,11 +29,15 @@
   <span ng-repeat="word in stuff.activePiece.content.split(' ') track by $index" ng-click="setActive($index, word)">
     {{word}}
   </span>
-  <p>{{stuff.activeWord}}</p>
-  <ul>
-    <li ng-repeat="syn in stuff.syn_json[stuff.activeWord].noun.syn" ng-click="embedWord(syn)">
+</section>
+
+<section id="synonyms">
+  <h4>{{stuff.activeWord}}</h4>
+
+  <ul ng-repeat="(part, set) in stuff.syn_json[stuff.activeWord]">
+    <h5>{{part}}</h5>
+    <li ng-repeat="syn in set.syn" ng-click="embedWord(syn)">
       {{syn}}
     </li>
   </ul>
-
 </section>
