--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -20,7 +20,7 @@
 
     <div class="dropdown">
       <button class="btn btn-default dropdown-toggle disp-inb" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-        Dropdown
+        My Pieces
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
@@ -29,6 +29,8 @@
         </li>
       </ul>
     </div>
+
+    <button class="btn btn-info" ng-click="savePiece()">Save Piece</button>
 
   </div>
 </div>
