--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,10 +17,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#/">Home</a></li>
         <li><a href="#/my_pieces">My Pieces</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Works</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
         <li>
           <a class="btn btn-default btn-outline btn-circle collapsed"  data-toggle="collapse" href="#nav-collapse2" aria-expanded="false" aria-controls="nav-collapse2">Sign in</a>
         </li>
