edit form interacts with synonms

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -73,8 +73,16 @@
   margin: 0;
 }
 
-disp-inb {
+.mar-t-sm {
+  margin-top: 20px;
+}
+
+.disp-inb {
   display: inline-block;
+}
+
+.hide {
+  display: none;
 }
 
 #synonyms h4,
