--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -3,8 +3,8 @@
 
     <div ng-init="tab='button'">
       <button class="btn btn-primary disp-inb" ng-click="tab='form'" ng-show="tab==='button'">
-        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
         Add Piece
+        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
       </button>
       <form ng-show="tab==='form'" method="post" action="/pieces">
         <div class="form-group">
@@ -21,38 +21,47 @@
       </form>
     </div>
 
-    <div class="dropdown">
-      <button class="btn btn-default dropdown-toggle disp-inb" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-        My Pieces
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-        <li ng-repeat="piece in pieces" role="presentation">
-          <a ng-click="setActivePiece(piece)" role="menuitem" tabindex="-1" >{{piece.title}}</a>
-        </li>
-      </ul>
-    </div>
-
-    <button class="btn btn-info" ng-click="savePiece()">
-      <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-      Save Piece
-    </button>
-
   </div>
 </div>
 
+
 <section ng-init="syn = true">
-  <button ng-click="syn = !syn"class="btn btn-info">
-    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
+  <div class="dropdown disp-inb">
+    <button class="btn btn-default dropdown-toggle disp-inb" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+      My Pieces
+      <span class="caret"></span>
+    </button>
+
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+      <li ng-repeat="piece in pieces" role="presentation">
+        <a ng-click="setActivePiece(piece)" role="menuitem" tabindex="-1" >{{piece.title}}</a>
+      </li>
+    </ul>
+  </div>
+
+  <button class="btn btn-info disp-inb" ng-click="savePiece()">
+    Save Piece
+    <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
   </button>
-  <article ng-show="syn===true" id="show-piece" class="fancy">
+
+  <button ng-click="syn = !syn; refreshActiveFromSyn()" ng-show="syn===true" class="btn btn-info btn-small">
+    Edit
+    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+  </button>
+
+  <button ng-click="syn = !syn; refreshActiveFromEdit()" ng-show="syn===false" class="btn btn-info btn-small">
+    Edit
+    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+  </button>
+
+  <article ng-show="syn===true" id="show-piece" class="fancy mar-t-sm">
     <span ng-repeat="word in stuff.activePiece.content.split(' ') track by $index" ng-click="setActiveWord($index, word)">
       {{word}}
     </span>
   </article>
-  <article ng-show="syn===false">
+  <article ng-show="syn===false" class="mar-t-sm">
     <div class="form-group">
-      <textarea class="form-control fancy" id="edit-piece" name="content" rows="20">{{stripSpan()}}</textarea>
+      <textarea class="form-control fancy" id="edit-piece" name="content" rows="20">{{stuff.activePiece.content}}</textarea>
     </div>
   </article>
 </section>
