--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
 <body ng-controller="HomeController as stuff">
   <%= yield %>
 
-  <main class="container" ng-view></main>
+  <main ng-view></main>
 
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
