add SICK animation

--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -1,3 +1,17 @@
 <section class="jumbotron" id="jumbo">
   <h1>Wordasarus</h1>
+  <p>Splice new words into your writing with a few clicks.</p>
+</section>
+
+<section class="container">
+  <h2>Some
+    <div class="rw-words rw-words-1">
+      <span>words </span>
+      <span>stuff</span>
+      <span>thing</span>
+      <span>info</span>
+      <span>nonsense</span>
+      <span>wisdom</span>
+    </div>
+  </h2>
 </section>
