--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,6 @@
-<!-- Second navbar for sign in -->
 <nav class="navbar navbar-default">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
+
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
         <span class="sr-only">Toggle navigation</span>
@@ -12,11 +11,26 @@
       <a class="navbar-brand" href="#">Wordasaurus</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+    <% if logged_in? %>
     <div class="collapse navbar-collapse" id="navbar-collapse-2">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#/">Home</a></li>
         <li><a href="#/my_pieces">My Pieces</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
+        <li>
+          <a class="btn btn-default btn-outline btn-circle collapsed" id="sign-out" href="/logout" aria-expanded="false" aria-controls="nav-collapse2">Sign out</a>
+        </li>
+      </ul>
+    </div>
+
+    <% else %>
+    <div class="collapse navbar-collapse" id="navbar-collapse-2">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/">Home</a></li>
+        <li><a href="" class="prompt">My Pieces</a></li>
         <li><a href="#">#</a></li>
         <li><a href="#">#</a></li>
         <li><a href="#">#</a></li>
@@ -35,10 +49,12 @@
             <label class="sr-only" for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="password" required />
           </div>
-          <button type="submit" class="btn btn-success">Sign in</button>
+          <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
       </div>
     </div>
+    <% end %>
+
   </div>
 </nav>
 
