--- a/public/css/application.css
+++ b/public/css/application.css
@@ -73,6 +73,7 @@
 
 .mar-0 { margin: 0; }
 .mar-t-sm { margin-top: 20px; }
+.mar-t-lg { margin-top: 60px; }
 .disp-inb { display: inline-block; }
 .hide { display: none; }
 
@@ -109,14 +110,18 @@
   font-family: "roboto slab";
 }
 
+.place {
+
+}
+
 .rw-words {
     display: inline;
     text-indent: 10px;
 }
 .rw-words-1 span {
+    text-align: center;
     position: absolute;
     opacity: 0;
-    overflow: hidden;
     -webkit-animation: rotateWord 18s linear infinite 0s;
     -ms-animation: rotateWord 18s linear infinite 0s;
     animation: rotateWord 18s linear infinite 0s;
@@ -147,85 +152,43 @@
     animation-delay: 15s;
 }
 @-webkit-keyframes rotateWord {
-    0% {
-    opacity: 0;
+  0% { opacity: 0; }
+  2% { opacity: 0;
+      -webkit-transform: translateY(-30px); }
+  5% { opacity: 1;
+      -webkit-transform: translateY(0px); }
+  17% { opacity: 1;
+      -webkit-transform: translateY(0px); }
+  20% { opacity: 0;
+      -webkit-transform: translateY(30px); }
+  80% { opacity: 0; }
+  100% { opacity: 0; } }@-ms-keyframes rotateWord { 0% { opacity: 0; }
+  2% { opacity: 0;
+      -ms-transform: translateY(-30px); }
+  5% { opacity: 1;
+      -ms-transform: translateY(0px); }
+  17% { opacity: 1;
+      -ms-transform: translateY(0px); }
+  20% { opacity: 0;
+      -ms-transform: translateY(30px); }
+  80% { opacity: 0; }
+  100% { opacity: 0; } }@keyframes rotateWord { 0% { opacity: 0; }
+  2% { opacity: 0;
+      -webkit-transform: translateY(-30px);
+      transform: translateY(-30px); }
+  5% { opacity: 1;
+      -webkit-transform: translateY(0px);
+      transform: translateY(0px); }
+  17% { opacity: 1;
+      -webkit-transform: translateY(0px);
+      transform: translateY(0px); }
+  20% { opacity: 0;
+      -webkit-transform: translateY(30px);
+      transform: translateY(30px); }
+  80% { opacity: 0; }
+  100% { opacity: 0; }
 }
-2% {
-    opacity: 0;
-    -webkit-transform: translateY(-30px);
-}
-5% {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-}
-17% {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-}
-20% {
-    opacity: 0;
-    -webkit-transform: translateY(30px);
-}
-80% {
-    opacity: 0;
-}
-100% {
-    opacity: 0;
-}
-}@-ms-keyframes rotateWord {
-    0% {
-    opacity: 0;
-}
-2% {
-    opacity: 0;
-    -ms-transform: translateY(-30px);
-}
-5% {
-    opacity: 1;
-    -ms-transform: translateY(0px);
-}
-17% {
-    opacity: 1;
-    -ms-transform: translateY(0px);
-}
-20% {
-    opacity: 0;
-    -ms-transform: translateY(30px);
-}
-80% {
-    opacity: 0;
-}
-100% {
-    opacity: 0;
-}
-}@keyframes rotateWord {
-    0% {
-    opacity: 0;
-}
-2% {
-    opacity: 0;
-    -webkit-transform: translateY(-30px);
-    transform: translateY(-30px);
-}
-5% {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-}
-17% {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-}
-20% {
-    opacity: 0;
-    -webkit-transform: translateY(30px);
-    transform: translateY(30px);
-}
-80% {
-    opacity: 0;
-}
-100% {
-    opacity: 0;
-}
+
+.word-scroll h3{
+  line-height: 170%;
 }
