--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -1,17 +1,64 @@
 <section class="jumbotron" id="jumbo">
-  <h1>Wordasarus</h1>
+  <h1>Wordasaurus</h1>
   <p>Splice new words into your writing with a few clicks.</p>
 </section>
 
-<section class="container">
-  <h2>Some
+
+<section class="container word-scroll">
+  <h3 class="col-xs-12">Need help
     <div class="rw-words rw-words-1">
-      <span>words </span>
-      <span>stuff</span>
-      <span>thing</span>
-      <span>info</span>
-      <span>nonsense</span>
-      <span>wisdom</span>
+      <span>improving</span>
+      <span>developing</span>
+      <span>bettering</span>
+      <span>revamping</span>
+      <span>boosting</span>
+      <span>enhancing</span>
     </div>
-  </h2>
+    <div class="disp-inb place" style="width: 140px;"></div>
+    your writing? Upload your
+    <div class="rw-words rw-words-1">
+      <span>&nbspwork</span>
+      <span>essay</span>
+      <span>piece</span>
+      <span>article</span>
+      <span>paper</span>
+      <span>report</span>
+    </div>
+    <div class="disp-inb place" style="width: 90px;"></div>
+    and click the words to get instant suggestions that you can
+    <div class="rw-words rw-words-1">
+      <span>insert</span>
+      <span>splice</span>
+      <span>inject</span>
+      <span>embed</span>
+      <span>enter</span>
+      <span>place</span>
+    </div>
+    <div class="disp-inb place" style="width: 90px;"></div>
+    into the text!
+  </h3>
 </section>
+
+<section class="container mar-t-lg">
+  <center>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#register-modal">Sign up now!</button>
+  </center>
+</section>
+
+<div class="modal fade" id="register-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Sign up</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
