--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -34,14 +34,15 @@
         </li>
       </ul>
       <div class="collapse nav navbar-nav nav-collapse slide-down" id="nav-collapse2">
+
         <form id="login-form" method="post" action="/session" class="navbar-form navbar-right form-inline" role="form">
           <div class="form-group">
             <label class="sr-only" for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="email" autofocus required />
+            <input type="email" class="form-control" id="email" value="<%= @user.email %>" name="email" placeholder="email" autofocus required />
           </div>
           <div class="form-group">
             <label class="sr-only" for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="password" required />
+            <input type="password" class="form-control" id="password" name="password" placeholder="<%= log_error ? 'invalid' : '' %> password" required />
           </div>
           <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
