--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -42,7 +42,7 @@
 <div class="modal fade" id="register-modal">
   <div class="modal-dialog">
     <div class="modal-content">
-      <form class="form-horizontal" method="post" action="/users">
+      <form class="form-horizontal" method="post" action="/users" id="reg-form">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Registration Form</h4>
