--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -58,7 +58,7 @@
 <% if !logged_in? %>
 <section class="container mar-t-lg">
   <center>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#register-modal">Sign up now!</button>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#register-modal" id="reg-but">Sign up now!</button>
   </center>
 </section>
 <% end %>
