--- a/public/css/application.css
+++ b/public/css/application.css
@@ -196,3 +196,12 @@
 .word-scroll h3{
   line-height: 170%;
 }
+
+.syns li {
+  margin-right: 5px;
+
+}
+.syns {
+  list-style: none;
+  padding-left: 5px;
+ }
