--- a/public/css/application.css
+++ b/public/css/application.css
@@ -114,10 +114,6 @@
   font-family: "roboto slab";
 }
 
-.place {
-
-}
-
 .rw-words {
     display: inline;
     text-indent: 10px;
@@ -197,11 +193,21 @@
   line-height: 170%;
 }
 
-.syns li {
-  margin-right: 5px;
-
+.syns li { margin-right: 5px; transition: 0.5s;}
+.syns li:hover {
+  color: yellow;
+  background-color: dodgerblue;
+  cursor: pointer;
 }
 .syns {
   list-style: none;
   padding-left: 5px;
+ }
+
+.fancy span {
+  cursor: pointer;
+  transition: 0.3s;
+ }
+.fancy span:hover {
+  color: dodgerblue;
  }
