--- a/public/css/application.css
+++ b/public/css/application.css
@@ -70,11 +70,6 @@
   height: 30px;
 }
 
-.fancy {
-  font-family: "roboto slab";
-  line-height: 200%;
-}
-
 .mar-0 { margin: 0; }
 .mar-t-sm { margin-top: 20px; }
 .mar-t-lg { margin-top: 60px; }
@@ -193,7 +188,12 @@
   line-height: 170%;
 }
 
-.syns li { margin-right: 5px; transition: 0.5s;}
+.syns li {
+  margin-right: 5px;
+  transition: 0.5s;
+  font-size: 12px;
+  font-weight: 400;
+}
 .syns li:hover {
   color: yellow;
   background-color: dodgerblue;
@@ -211,3 +211,10 @@
 .fancy span:hover {
   color: dodgerblue;
  }
+.fancy {
+  font-family: "roboto slab";
+  line-height: 200%;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 16px;
+}
