fix a fw things. add style

--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -4,8 +4,8 @@
 </section>
 
 
-<section class="container word-scroll">
-  <h3 class="col-xs-12">Need help
+<section class="word-scroll">
+  <h3 class="col-xs-12 mar-0">Need help
     <div class="rw-words rw-words-1">
       <span>improving</span>
       <span>developing</span>
@@ -37,6 +37,10 @@
     <div class="disp-inb place" style="width: 90px;"></div>
     into the text!
   </h3>
+</section>
+
+<section class="container" id="gif">
+  <img src="/imgs/demo.gif" class="img-responsive mar-t-lg">
 </section>
 
 <div class="modal fade" id="register-modal">
