--- a/public/css/application.css
+++ b/public/css/application.css
@@ -66,10 +66,6 @@
   }
 }
 
-.alert-danger {
-  height: 30px;
-}
-
 .mar-0 { margin: 0; }
 .mar-t-sm { margin-top: 20px; }
 .mar-t-lg { margin-top: 60px; }
@@ -184,8 +180,13 @@
   100% { opacity: 0; }
 }
 
+#gif img { margin-left: auto; margin-right: auto; }
+.jumbotron { margin-bottom: 0px }
+
 .word-scroll h3{
   line-height: 170%;
+  background-color: #ddd;
+  padding: 50px;
 }
 
 .syns li {
@@ -224,3 +225,5 @@
   font-weight: 900;
   color: black;
 }
+
+.add-panel { background-color: #eeeeef }
