--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -5,7 +5,7 @@
 
 
 <section class="word-scroll">
-  <h3 class="col-xs-12 mar-0">Need help
+  <h3 class="header-text">Need help
     <div class="rw-words rw-words-1">
       <span>improving</span>
       <span>developing</span>
