--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,7 +2,6 @@
 <html lang="en" ng-app="wordasaurus">
 <head>
 
-  <!-- <link rel="stylesheet" href="/css/normalize.css"> -->
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/readable.css">
   <link rel="stylesheet" href="/css/application.css">
@@ -12,16 +11,23 @@
 </head>
 
 
-<body ng-controller="HomeController as stuff">
+<body ng-controller="HomeController as stuff"><div class="wrapper">
+
   <%= yield %>
 
-
-
+  <footer>
+    <div class="container">
+      <div class="bhl clearfix">
+        <p>Powered by:</p>
+        <img src="imgs/bhl.png">
+      </div>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/application.js"></script>
-</body>
+</div></body>
 </html>
