--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -30,7 +30,7 @@
         <li><a class="collapsed" data-toggle="collapse" href="#nav-collapse2" aria-expanded="false" aria-controls="nav-collapse2">My Pieces</a></li>
         <li><a href="http://acarl005.github.io">Andrew's Blog</a></li>
         <li>
-          <a class="btn btn-default btn-outline btn-circle collapsed" id="sign-in" data-toggle="collapse" href="#nav-collapse2" aria-expanded="false" aria-controls="nav-collapse2">Sign in</a>
+          <a class="btn btn-default btn-outline btn-circle collapsed" id="sign-in" data-toggle="collapse" href="#nav-collapse2" aria-expanded="false" aria-controls="nav-collapse2">Login form</a>
         </li>
       </ul>
       <div class="collapse nav navbar-nav nav-collapse slide-down" id="nav-collapse2">
