--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -64,14 +64,14 @@
         <div class="form-group">
           <label class="col-md-4 control-label" for="password">Password</label>
           <div class="col-md-6">
-            <input id="password" name="password" type="password" class="form-control input-md" required>
+            <input id="reg-password" name="password" type="password" class="form-control input-md passw" required>
           </div>
         </div>
 
         <div class="form-group">
           <label class="col-md-4 control-label" for="conf-password">Confirm Password</label>
           <div class="col-md-6">
-            <input id="conf-password" name="conf_password" type="password" class="form-control input-md" required>
+            <input id="conf-password" name="conf_password" type="password" class="form-control input-md passw" required>
           </div>
         </div>
 
