--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -55,6 +55,10 @@
       <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
     </button>
 
+    <button ng-click="deleteActive()" class="btn btn-danger pull-right">
+      Delete
+    </button>
+
     <article ng-show="syn===true" id="show-piece" class="fancy mar-t-sm">
       <span ng-repeat="word in stuff.activePiece.content.split(' ') track by $index" ng-click="setActiveWord($index, word)">
         {{word}}
