--- a/public/css/application.css
+++ b/public/css/application.css
@@ -81,8 +81,8 @@ body { margin: 0 0 150px; padding-bottom: 250px;}
 #dino {
   position: absolute;
   width: 200px;
-  top: 240px;
-  right: 50px;
+  top: 200px;
+  left: 550px;
 }
 
 #synonyms h4,
