--- a/public/partials/home/index.html
+++ b/public/partials/home/index.html
@@ -1,7 +1,7 @@
 <section class="jumbotron" id="jumbo">
   <h1>Wordasaurus</h1>
   <p>Splice new words into your writing with a few clicks.</p>
-  <img src="/imgs/wordasaurus.png" id="dino" class="hidden-sm hidden-xs">
+  <img src="/imgs/wordasaurus.png" id="dino" class="hidden-xs">
 </section>
 
 
