stop defulat form

--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -7,14 +7,14 @@
           Add Piece
           <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
         </button>
-        <form ng-show="tab==='form'" method="post" action="/pieces">
+        <form ng-show="tab==='form'" ng-submit="createForm.$valid && createPiece(title, content)" name="createForm" novalidate>
           <div class="form-group">
             <label for="new-title">Title</label>
-            <input type="text" class="form-control" id="new-title" name="title" required>
+            <input type="text" class="form-control" id="new-title" name="title" required ng-model="title">
           </div>
           <div class="form-group">
             <label for="new-piece">New Piece</label>
-            <textarea class="form-control" id="new-piece" name="content" placeholder="Express yourself!" rows="10" required></textarea>
+            <textarea class="form-control" id="new-piece" name="content" placeholder="Express yourself!" rows="10" required ng-model="content"></textarea>
           </div>
 
           <button type="submit" class="btn btn-primary">Submit</button>
