use scope instead of this and fix rspec

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,7 @@
 </head>
 
 
-<body ng-controller="HomeController as stuff"><div class="wrapper">
+<body ng-controller="HomeController as home"><div class="wrapper">
 
   <%= yield %>
 
