--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -2,12 +2,12 @@
   <div class="panel panel-default add-panel">
     <div class="panel-body">
 
-      <div ng-init="stuff.tab='button'">
-        <button class="btn btn-primary disp-inb" ng-click="stuff.tab='form'" ng-show="stuff.tab==='button'">
+      <div ng-init="tab='button'">
+        <button class="btn btn-primary disp-inb" ng-click="tab='form'" ng-show="tab==='button'">
           Add Piece
           <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
         </button>
-        <form ng-show="stuff.tab==='form'" ng-submit="createForm.$valid && createPiece(title, content)" name="createForm" novalidate>
+        <form ng-show="tab==='form'" ng-submit="createForm.$valid && createPiece(title, content)" name="createForm" novalidate>
           <div class="form-group">
             <label for="new-title">Title</label>
             <input type="text" class="form-control" id="new-title" name="title" required ng-model="title">
@@ -18,7 +18,7 @@
           </div>
 
           <button type="submit" class="btn btn-primary">Submit</button>
-          <button ng-click="stuff.tab='button'" class="btn btn-default">Close</button>
+          <button ng-click="tab='button'" class="btn btn-default">Close</button>
         </form>
       </div>
 
@@ -60,27 +60,27 @@
     </button>
 
     <article ng-show="syn===true" id="show-piece" class="fancy mar-t-sm">
-      <span ng-repeat="word in stuff.activePiece.content.split(' ') track by $index" ng-click="setActiveWord($index, word)">
+      <span ng-repeat="word in activePiece.content.split(' ') track by $index" ng-click="setActiveWord($index, word)">
         {{word}}
       </span>
     </article>
 
     <article ng-show="syn===false" class="mar-t-sm">
       <div class="form-group">
-        <textarea class="form-control fancy" id="edit-piece" name="content" rows="20">{{stuff.activePiece.content}}</textarea>
+        <textarea class="form-control fancy" id="edit-piece" name="edit-content" rows="20">{{activePiece.content}}</textarea>
       </div>
     </article>
   </section>
 
   <section id="synonyms">
-    <h3>{{stuff.activeWord}}</h3>
+    <h3>{{activeWord}}</h3>
 
-    <article ng-repeat="(part, set) in stuff.syn_json[stuff.activeWord]">
+    <article ng-repeat="(part, set) in syn_json[activeWord]">
       <div class="col-md-3 col-sm-4 well">
         <h5>{{part}}</h5>
         <ul class="syns">
-          <li ng-click="embedWord(stuff.activeWord)" class="disp-inb label label-default">
-            &nbsp{{stuff.activeWord}}&nbsp
+          <li ng-click="embedWord(activeWord)" class="disp-inb label label-default">
+            &nbsp{{activeWord}}&nbsp
           </li>
           <li ng-repeat="syn in set.syn" ng-click="embedWord(syn)" class="disp-inb label label-default">
             &nbsp{{syn}}&nbsp
