--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="/css/readable.css">
   <link rel="stylesheet" href="/css/application.css">
 
-
   <title>Wordasaurus</title>
 </head>
 
@@ -19,7 +18,7 @@
     <div class="container">
       <div class="bhl clearfix">
         <p>Powered by:</p>
-        <img src="imgs/bhl.png">
+        <img src="imgs/bhl.png" style="width: 100px;">
       </div>
     </div>
   </footer>
