--- a/public/partials/directives/add-piece.html
+++ b/public/partials/directives/add-piece.html
@@ -2,11 +2,11 @@
   <div class="panel-body">
 
     <div>
-      <button class="btn btn-primary disp-inb" ng-click="home.tab='form'" ng-show="home.tab==='button'">
+      <button class="btn btn-primary disp-inb" ng-click="tab='form'" ng-show="tab==='button'">
         Add Piece
         <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
       </button>
-      <form ng-show="home.tab==='form'" ng-submit="createForm.$valid && createPiece(title, content)" name="createForm" novalidate>
+      <form ng-show="tab==='form'" ng-submit="createForm.$valid && createPiece(title, content); tab='button'" name="createForm" novalidate>
         <div class="form-group">
           <label for="new-title">Title</label>
           <input type="text" class="form-control" id="new-title" name="title" required ng-model="title">
@@ -17,7 +17,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
-        <button ng-click="home.tab='button'" class="btn btn-default">Close</button>
+        <button ng-click="tab='button'" class="btn btn-default">Close</button>
       </form>
     </div>
 
