--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,10 +23,6 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/application.js"></script>
+  <script src="/js/app.min.js"></script>
 </div></body>
 </html>
